manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: container-probe
  labels:
    app: container-probe
spec:
  replicas: 3
  selector:
    matchLabels:
      app: container-probe
  template:
    metadata:
      labels:
        app: container-probe
    spec:
      containers:
      - name: container-probe
        image: gcr.io/almost-giving-up-of-gke/container-probe:v0.0.2
