manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: container-probe
spec:
  selector:
    app: container-probe
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
