manifests/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: container-probe
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: container-probe
          servicePort: 80
